--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -8,5 +8,9 @@
 <body>
 
     <h2>Hola mundo! Mi nombre es Martin Martinez</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia blanditiis earum facere laborum libero assumenda quas distinctio consequatur placeat aliquam.</p>
+    <h3>Card</h3>
+    <button>Iniciar sesion</button>
+    <button>Registrarme</button>
 </body>
 </html>
