--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -12,5 +12,6 @@
     <h3>Card</h3>
     <button>Iniciar sesion</button>
     <button>Registrarme</button>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vitae temporibus commodi consectetur ullam mollitia ut voluptatem numquam nemo animi.</h2>
 </body>
 </html>
