agregando inicio de sesion

--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -11,6 +11,8 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia blanditiis earum facere laborum libero assumenda quas distinctio consequatur placeat aliquam.</p>
     <h3>Card</h3>
     <button>Iniciar sesion</button>
-    <button>Registrarme</button>
+    <p>Inicia sesion por favor</p>
+    <button>Register</button>
+    <p>¿Aun no estas registrado?</p>
 </body>
 </html>
