--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Word</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h2>Hola mundo! Mi nombre es Martin Martinez</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia blanditiis earum facere laborum libero assumenda quas distinctio consequatur placeat aliquam.</p>
-    <h3>Card</h3>
-    <button>Iniciar sesion</button>
-    <p>Inicia sesion por favor</p>
-    <button>Register</button>
-    <p>¿Aun no estas registrado?</p>
+    <p class="parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia blanditiis earum facere laborum libero assumenda quas distinctio consequatur placeat aliquam.</p>
+    <div class="usuario">
+        <div class="user-sig">
+    <button id="sig-button">Iniciar sesion</button>
+    <p class="sig-button">Inicia sesion por favor</p>
+        </div>
+        <div class="user-reg">
+    <button id="reg-button">Register</button>
+    <p class="reg-button">¿Aun no estas registrado?</p>
+</div>
+</div>
 </body>
 </html>
