--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -10,13 +10,15 @@
     <p class="parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia blanditiis earum facere laborum libero assumenda quas distinctio consequatur placeat aliquam.</p>
     <div class="usuario">
         <div class="user-sig">
-    <button id="sig-button">Iniciar sesion</button>
+    <button id="sig-button">INICIAR SESION</button>
     <p class="sig-button">Inicia sesion por favor</p>
         </div>
         <div class="user-reg">
-    <button id="reg-button">Register</button>
+    <button id="reg-button">REGISTRAR AHORA!</button>
     <p class="reg-button">¿Aun no estas registrado?</p>
 </div>
 </div>
+<img src="/Code/img/hackign.webp" alt="">
+<p class="parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati corrupti sed saepe animi accusantium tempore accusamus aspernatur molestiae? Amet repellat perspiciatis praesentium nemo soluta veniam fuga ut accusantium iure maiores. Dolores rem expedita facere iste enim quos obcaecati illo doloremque.</p>
 </body>
 </html>
