--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -18,7 +18,7 @@
     <p class="reg-button">¿Aun no estas registrado?</p>
 </div>
 </div>
-<img src="/Code/img/hackign.webp" alt="">
+<img src="/Code/img/hackign.webp" alt="" class="img-body">
 <p class="parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati corrupti sed saepe animi accusantium tempore accusamus aspernatur molestiae? Amet repellat perspiciatis praesentium nemo soluta veniam fuga ut accusantium iure maiores. Dolores rem expedita facere iste enim quos obcaecati illo doloremque.</p>
 </body>
 </html>
